[package]
name = "tls-tomorrow"
version = "0.1.0"
description = "Try to make TLS connections with manipulated system time"
categories = ["command-line-utilities", "network-programming"]
license = "GPL-3.0+"
edition = "2018"

[dependencies]
clap = { version = "4", features = ["derive"] }
once_cell = "1"
rustls = { version = "0.20", features = ["dangerous_configuration"] }
rustls-native-certs = "0.5"
